Updated all project content, changed css colors, small edits to about me

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,8 +1,9 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #0fabbc;
+$secondary-color: #12cad6;
 
-$white-color: #fff;
+$white-color: #e4f9ff;
+//#fff;
 
 $dark-grey: #333333;
 
