--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,16 +17,16 @@
 
   // If you want to set a background image on the hero section, uncomment these with yout custom image
 
-  /* background: url("/src/assets/[your-image].png");
-  background-position: center;
-  background-size: cover; */
+  // background: url("/src/assets/back1.jpg");
+  // background-position: center;
+  // background-size: cover; 
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
   }
 
   .hero-title {
-    font-size: 5.6rem;
+    font-size: 5.8rem;
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
